Fixed z-index for pageArrowContainer

--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -95,7 +95,7 @@
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  z-index: 49;
+  // z-index: 49;
   cursor: pointer;
   animation: bounce 2s infinite;
 
